[gd_scene load_steps=3 format=3 uid="uid://brunixqctm7hs"]

[ext_resource type="Script" uid="uid://do1khrypd3wl5" path="res://ui/components/inventory_item_slot.gd" id="1_0x8k2"]
[ext_resource type="Theme" uid="uid://bxlt2ju7qgrqv" path="res://theme.tres" id="2_theme"]

[node name="InventoryItemSlot" type="Panel"]
custom_minimum_size = Vector2(64, 64)
theme = ExtResource("2_theme")
script = ExtResource("1_0x8k2")

[node name="ItemIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -16.0
offset_right = 62.0
offset_bottom = -2.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ChargesLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 2.0
offset_top = 2.0
offset_right = 62.0
offset_bottom = 18.0
theme_override_colors/font_color = Color(0.7, 0.9, 0.7, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_font_sizes/font_size = 8
text = "5/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RarityBorder" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EmptyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -8.0
offset_right = 20.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 10
text = "Empty"
horizontal_alignment = 1
vertical_alignment = 1
